--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "jodit-vue": "^1.2.3",
     "jquery": "^3.3.1",
     "popper.js": "^1.14.7",
-    "vue": "^2.6.6"
+    "vue": "^2.6.6",
+    "vue-code-highlight": "^0.7.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.5.0",
